MDEV-510 assert triggered by ./mtr --ps-protocol rpl_mdev382

The DELETE for emplicitly emptied MEMORY tables should be written directly to binlog.